<resources>
    <string name="app_name">ColibríView</string>
    <string name="texto2">Presiona para continuar</string>
    <string name="titLogin">Iniciar Sesión</string>
    <string name="form_username">Correo electrónico</string>
    <string name="card_required">Requerido</string>
    <string name="form_passw">Contraseña</string>
    <string name="olvida">¿Olvidaste tu contraseña?</string>
    <string name="o">Iniciar sesión con</string>
    <string name="titRest">Restablecer contraseña</string>
    <string name="restablece">Se enviará un correo electrónico para poder restablecer la contraseña.</string>
    <string name="completado">¡Test Completo!</string>
    <string name="continuar">CONTINUAR</string>
    <string name="resultados">VER RESULTADOS</string>
    <string name="respuestas">MIS RESPUESTAS</string>
    <string name="pablo">PABLO</string>
    <string name="nomtest">Test de Ishihara</string>
    <string name="nomtest_PD">Test de Protan y Deutan</string>
    <string name="nomtest_Tr">Test de Tritan</string>
    <string name="nomtest_Tl">Test de Lantern</string>
    <string name="correctas">15/24 Respuestas correctas</string>
    <string name="diagnostico">Daltónico con una ceguera leve al color verde (deuteranomalía).</string>
    <string name="des_ishihara">El daltonismo es una alteración genética que afecta la capacidad de percibir colores.</string>
    <string name="des_PD">Las personas con este problema pueden tener distintos grados de dificultad en su detección.</string>
    <string name="des_TR">El daltonismo es una alteración genética que afecta la capacidad de percibir colores.</string>
    <string name="des_Tl">Las personas con este problema pueden tener distintos grados de dificultad en su detección.</string>
    <string name="quees">¿Qué es?</string>
    <string name="descripcion">
        El daltonismo, también llamado deficiencia de color, afecta la percepción normal de los colores. Las personas con daltonismo tienen dificultades para distinguir ciertos colores, especialmente el verde y el rojo, y a veces el azul.
        \n\n
        En la retina, hay dos tipos de células sensibles a la luz: los bastones, que detectan la luz y la oscuridad, y los conos, que detectan los colores y se concentran en el centro de la visión. Hay tres tipos de conos: sensibles al rojo, verde y azul. El cerebro utiliza esta información de los conos para determinar los colores que percibimos.
        \n\n
        </string>
    <string name="descripcion2">
        El daltonismo puede ser causado por la ausencia, mal funcionamiento o percepción anormal de uno o más tipos de conos. En casos graves, donde los tres tipos de conos están ausentes, el daltonismo es más severo. En casos leves, los tres tipos de conos están presentes pero uno no funciona correctamente, resultando en una percepción anormal de los colores.
        \n\n
        Existen diferentes grados de daltonismo. Algunas personas con deficiencias leves pueden ver los colores normalmente con buena iluminación, pero tienen dificultades con luz tenue. Otros pueden tener dificultades para distinguir ciertos colores en cualquier iluminación. La forma más extrema, donde todo se ve en tonos de gris, es poco común. El daltonismo tiende a ser estable a lo largo de la vida y generalmente afecta a ambos ojos por igual.
        \n\n
        </string>
    <string name="descripcion3">
        Aunque el daltonismo es generalmente congénito, en algunos casos puede adquirirse más tarde en la vida. Cualquier cambio en la percepción de los colores debe ser evaluado por un oftalmólogo, ya que podría indicar un problema más serio.
    </string>
    <string name="tipos_daltonismo">Tipos</string>
    <string name="descripcion_Tipos">
        <b>1. Acromatismo:</b><br />\n
        <i>Esta es una condición rara en la que el sujeto no posee ningún pigmento o los conos no son funcionales. La visión se limita a escala de grises, blanco y negro.</i><br /><br />
        \n\n
        </string>
    <string name="descripcion_Tipos2">
        <b>2. Dicromatismo:</b><br />\n
        <i>Este tipo de daltonismo es causado por la ausencia de uno de los tipos de pigmentos, lo que dificulta la percepción del color asociado a ese pigmento. Hay tres subtipos básicos:</i><br />
        <br />\n
           \t\t<b>•</b><b>Protanopia:</b><br />
            <i>El sujeto no puede percibir las frecuencias de onda que permiten ver el color rojo. El rojo tiende a verse como beige, gris o incluso amarillo en ciertos casos.</i><br />
        <br />\n
           \t\t<b>•</b><b>Tritanopia:</b><br />
            <i>Este es el menos común de los tipos de dicromatismo. La persona no puede percibir el color azul y tiende a confundirlo con el verde. Además, los amarillos pueden parecer rojos, violetas o blancos.</i><br />
        <br />\n
           \t\t<b>•</b><b>Deuteranopia:</b><br />
            <i>Es el tipo de daltonismo más común junto con la protanopia. En este caso, el sujeto carece del pigmento verde, lo que afecta su percepción del color verde y del rojo.</i><br /><br />
            \n\n
        </string>
    <string name="descripcion_Tipos3">
        <b>3. Tricromatismo anómalo:</b><br />\n
            <i>En este tipo, la persona tiene los tres tipos de pigmentos presentes, pero al menos uno está alterado y no es funcional. Hay tres subtipos:</i><br />
            <br />\n
           \t\t<b>•</b><b>Protanomalía:</b><br />
            <i>El sujeto puede percibir los colores verde y azul normalmente, pero el rojo no se percibe con normalidad.</i><br />
            <br />\n
           \t\t<b>•</b><b>Tritanomalía:</b><br />
            <i>La persona no percibe correctamente el azul y puede confundirlo con otros colores. El verde y el rojo se perciben normalmente.</i><br />
        <br />\n
           \t\t<b>•</b><b>Deuteranomalía:</b><br />
            <i>En este caso, la anomalía está en el pigmento verde, que no se percibe completamente.</i><br />
            \n\n
        Cada tipo de daltonismo presenta distintas características y afecta la percepción del color de manera diferente.
    </string>
    <string name="causas">Causas</string>
    <string name="causas_daltonismo">La mayoría de las personas que tienen daltonismo nacen con la afección. (Esto es lo que se llama una afección congénita). Los defectos congénitos de la visión de color suelen pasar de la madre al hijo varón.\n
        Estos defectos se deben a una ausencia parcial o total de los conos en la retina. Los conos ayudan a distinguir los colores rojo, verde y azul.\n
        La mayoría de los problemas de la visión de color que aparecen más adelante en la vida son resultado de:\n\n
        • Una enfermedad\n
        • Un traumatismo\n
        • Los efectos tóxicos de algunos medicamentos\n
        • Una enfermedad metabólica o una enfermedad vascular\n\n
        Los defectos de la visión de color causados por una enfermedad no se entienden tan bien como los defectos congénitos. El daltonismo debido a una enfermedad específica a menudo afecta cada ojo de manera diferente, y suele empeorar con el tiempo. La pérdida de la visión de color adquirida puede ser el resultado de daño a la retina o al nervio óptico.
    </string>
    <string name="personas_riesgo">Personas en riesgo</string>
    <string name="riesgo_daltonismo">Los hombres tienen un riesgo mucho mayor de nacer con daltonismo que las mujeres, quienes rara vez tienen este problema. Se calcula que uno de cada diez hombres tiene alguna forma de deficiencia de color.
        El daltonismo es más común entre los hombres que tienen ascendencia del norte de Europa.\n\n
        Ciertas enfermedades pueden aumentar el riesgo de tener deficiencia de color adquirida, entre ellas:\n\n
        • El glaucoma\n
        • La diabetes\n
        • La degeneración macular\n
        • La enfermedad de Alzheimer\n
        • La enfermedad de Parkinson\n
        • El alcoholismo crónico\n
        • Leucemia\n
        • La anemia falciforme\n\n
        Ciertos medicamentos también pueden aumentar su riesgo de contraer daltonismo. La hidroxicloroquina (Plaquenil) puede causar daltonismo.
        Se usa para tratar la artritis reumatoide, entre otras afecciones.
    </string>
    <string name="numero">12</string>
    <string name="registrar">Registrar usuario</string>
    <string name="User_Profile">Nombre</string>
    <string name="User_Email_app">Correo Electrónico:</string>
    <string name="User_Password_app">Contraseña</string>
    <string name="form_name">Nombre</string>
    <string name="datos_test">Test de Ishihara</string>
    <string name="Radica">Lugar de nacimiento</string>
    <string name="Edad">Edad</string>
    <string name="texto1">
        El test de Ishihara es una prueba de visión de colores utilizada para detectar el daltonismo, específicamente la deficiencia en la percepción de los colores rojo y verde.
        Consiste en una serie de placas con patrones de puntos de colores que forman números o formas visibles solo para quienes tienen visión normal del color. \n\n
        Instrucciones: \n
        ¡Selecciona el número que veas en la pantalla!
    </string>
    <string name="texto_lantern">
        El test de Lantern es una prueba de visión de colores utilizada para evaluar la capacidad de una persona para distinguir luces de diferentes colores, especialmente en condiciones de baja luminosidad.
        Es comúnmente utilizado en la selección de personal para trabajos que requieren una percepción precisa del color, como pilotos y operadores de trenes.\n\n
        Muestra un par de luces (amarillo, rojo y verde). Se pide identificar los colores y verificar si son idénticos o no.\n\n
        Instrucciones: \n
        Identifica los colores de arriba y abajo (algunos son iguales). Los colores solo se muestran por unos segundos.\n
        Ejemplo 1: Arriba-rojo, Abajo-verde.\n
        Ejemplo 2: Arriba-amarillo, Abajo-amarillo.\n\n
        Si no puedes identificar los colores, haz clic en "siguiente".
    </string>
    <string name="texto_protan">
        El test de Protan y Deutan es una prueba diseñada para detectar deficiencias en la percepción del color rojo y verde. \n\n
Se utiliza para identificar la presencia de daltonismo protán y deutan, dos tipos comunes de daltonismo que afectan la capacidad de distinguir entre ciertos tonos de rojo y verde en particular.\n\n

        Instrucciones: \n
        Da clic en el espacio que falta para completar el circulo.\n
    </string>
    <string name="texto_tritan">
        El test de Tritan es una prueba que detecta la tritanopia en la percepción del color.
        Las personas con tritanopía tienen dificultades para distinguir entre ciertos tonos de azul y amarillo.\n\n

        Instrucciones: \n
        Da clic en el espacio que falta para completar el circulo.\n
    </string>
    <string name="TituloD2">Realizar Test</string>
    <string name="sabias_que">¿Sabías qué?</string>
    <string name="Titulo_D">Daltonismo</string>
    <string name="dialog_title">Detalle del Test de:</string>
    <string name="dialog_confirm">Aceptar</string>
    <string name="default_web_client_id">tu_id_de_cliente_web_predeterminado</string>
    <string name="verde">Verde</string>
    <string name="Amarillo">Amarillo</string>
    <string name="rojo">Rojo</string>
    <string name="siguiente">siguiente</string>
    <string name="Fecha">Fecha: </string>
    <string name="fecha_text">Date</string>
    <string name="Identificador">Identificador</string>
    <string name="Nombre_del_test">Nombre del test</string>
    <string name="titulo_resultados">Resultados</string>
    <string name="noveo">No veo la grieta</string>
    <string name="Completo">¡TEST COMPLETADO!</string>
    <string name="nose">NO LO SE</string>
</resources>