<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginTop="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        >

        <ImageView
            android:id="@+id/img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/seis"
            android:contentDescription="@string/descripcion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fecha"
            android:layout_marginStart="@dimen/margin5"
            android:layout_marginTop="@dimen/margin5"
            />


        <TextView
            android:id="@+id/nomtest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Nombre_del_test"
            android:textStyle="bold"
            android:textSize="@dimen/tamaño_letra_subtitulo"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/img"
            app:layout_constraintTop_toTopOf="@id/img"
            app:layout_constraintEnd_toStartOf="@id/delete"
            />
        <TextView
            android:id="@+id/nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_min"
            android:text="@string/Identificador"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/tamaño_letra_sub_subtitulo"
            app:layout_constraintStart_toStartOf="@id/nomtest"
            app:layout_constraintTop_toBottomOf="@id/nomtest"
            app:layout_constraintEnd_toEndOf="@id/nomtest"
            />
        <View
            android:id="@+id/linea_separacion"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="@id/img"
            app:layout_constraintTop_toBottomOf="@id/nombre"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin5"
            android:background="@color/gris"
            />

        <ImageView
            android:id="@+id/delete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_delete_24"
            android:padding="@dimen/common_padding_min"
            android:contentDescription="@string/descripcion"
            app:layout_constraintStart_toEndOf="@id/nomtest"
            app:layout_constraintTop_toTopOf="@id/nomtest"
            app:layout_constraintBottom_toBottomOf="@id/nomtest"
            app:layout_constraintEnd_toEndOf="@id/diag"
            />



        <TextView
            android:id="@+id/fecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fecha_text"
            android:textStyle="bold"
            android:textColor="@color/moradoo"
            android:textSize="@dimen/tamaño_letra_sub_subtitulo"
            android:padding="@dimen/common_padding_min"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin5"
            />

        <TextView
            android:id="@+id/correctas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/correctas"
            android:textStyle="bold"
            android:textColor="@color/grisf"
            android:textSize="@dimen/tamaño_letra_sub_subtitulo"
            android:padding="@dimen/common_padding_min"
            app:layout_constraintStart_toStartOf="@id/fecha"
            app:layout_constraintTop_toBottomOf="@id/fecha"
            app:layout_constraintEnd_toEndOf="@id/fecha"
            />

        <TextView
            android:id="@+id/diag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/diagnostico"
            android:textSize="@dimen/tamaño_descripcion"
            android:textStyle="bold"
            android:padding="@dimen/common_padding_min"
            app:layout_constraintStart_toStartOf="@id/correctas"
            app:layout_constraintTop_toBottomOf="@id/correctas"
            app:layout_constraintEnd_toEndOf="@id/correctas"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
