<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarNuevoActivity"
    android:background="#EDF2FA">
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:src="@drawable/inicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="50dp"
        />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintEnd_toEndOf="@id/image"
        android:layout_marginTop="45dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/form_username"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        app:helperText="@string/card_required"
        app:endIconMode="clear_text"
        android:enabled="false"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/form_passw"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintEnd_toEndOf="@id/email"
        android:layout_marginTop="30dp"
        app:helperText="@string/card_required"
        app:endIconMode="password_toggle"
        android:enabled="false"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recordar contraseña"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="10dp"
        android:textColor="#7858F2"
        android:textStyle="bold"
        android:buttonTint="#7858F2"
        />
    <TextView
        android:id="@+id/olvida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvida"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/checkbox"
        app:layout_constraintEnd_toEndOf="@id/password"
        android:layout_marginTop="10dp"
        android:textColor="#7858F2"
        />
    <Button
        android:id="@+id/ingresar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Ingresar"
        android:textStyle="bold"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@id/checkbox"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintEnd_toEndOf="@id/password"
        android:layout_marginTop="10dp"
        android:backgroundTint="#7858F2"
        android:theme="@style/Theme.MaterialComponents.DayNight.Dialog.Bridge"

        />
    <TextView
        android:id="@+id/o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ingresar"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/password"
        android:layout_marginTop="10dp"
        />
    <ImageView
        android:id="@+id/play"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/google"
        app:layout_constraintTop_toBottomOf="@id/o"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/password"
        android:contentDescription="Play"
        android:scaleType="centerCrop"
        android:layout_marginTop="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>