<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:src="@drawable/inicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="50dp"
        />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titLogin"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintEnd_toEndOf="@id/image"
        android:layout_marginTop="45dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/form_username"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="20dp"
                app:helperText="@string/card_required"
                app:endIconMode="clear_text"
                android:enabled="true"
                app:helperTextTextColor="#E91E63"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress|textAutoComplete|textAutoCorrect"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/form_passw"
                app:layout_constraintTop_toBottomOf="@id/emailLogin"
                app:layout_constraintStart_toStartOf="@id/emailLogin"
                app:layout_constraintEnd_toEndOf="@id/emailLogin"
                android:layout_marginTop="30dp"
                app:helperText="@string/card_required"
                app:endIconMode="password_toggle"
                android:enabled="true"
                app:helperTextTextColor="#E91E63"
                >

                <EditText
                    android:id="@+id/contras"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword|textAutoComplete"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/olvida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/olvida"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:layout_constraintEnd_toEndOf="@id/password"
                android:layout_marginTop="10dp"
                android:textColor="#7858F2"
                />
            <Button
                android:id="@+id/ingresar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Iniciar sesión"
                android:textStyle="bold"
                android:textSize="30dp"
                app:layout_constraintTop_toBottomOf="@id/olvida"
                app:layout_constraintStart_toStartOf="@id/password"
                app:layout_constraintEnd_toEndOf="@id/password"
                android:layout_marginTop="10dp"
                android:backgroundTint="#7858F2"
                android:theme="@style/Theme.MaterialComponents.DayNight.Dialog.Bridge"

                />

            <Button
                android:id="@+id/registrarte"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Crear cuenta"
                android:textStyle="bold"
                android:textSize="30dp"
                app:layout_constraintTop_toBottomOf="@id/ingresar"
                app:layout_constraintStart_toStartOf="@id/ingresar"
                app:layout_constraintEnd_toEndOf="@id/ingresar"
                android:layout_marginTop="10dp"
                android:textColor="#7858F2"
                android:theme="@style/Theme.MaterialComponents.DayNight.Dialog.Bridge"

                />
            <TextView
                android:id="@+id/o"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/o"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/registrarte"
                app:layout_constraintEnd_toEndOf="@id/password"
                app:layout_constraintStart_toStartOf="@id/password"
                app:layout_constraintBottom_toBottomOf="@id/google"
                />

            <ImageView
                android:id="@+id/google"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/google"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/o"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/ingresar"
                android:contentDescription="Google"
                android:scaleType="centerCrop"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:enabled="false"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>